Fix dl spacing

--- a/static/goscope/src/styles.scss
+++ b/static/goscope/src/styles.scss
@@ -10,6 +10,13 @@
   }
 }
 
+dt {
+  margin-bottom: 6px;
+}
+dd {
+  margin-bottom: 10px;
+}
+
 .text-center{
   text-align: center;
 }
